--- a/app/src/main/res/layout/item_button.xml
+++ b/app/src/main/res/layout/item_button.xml
@@ -8,8 +8,10 @@
 
     <Button
         android:id="@+id/btnRx"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Operation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
